--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -236,7 +236,7 @@ into \autoref{eq:weightfunc} leads to:
 \begin{eqnarray}
 w^i_k & \propto & \frac{P(y_k| x^i_k) \cancel{P(x^i_k | x^i_{k-1})} P(x^i_{0:k-1} | y_{0:k-1})}
                          {\cancel{P(x^i_k | x^i_{k-1})}q(x^i_{0:k-1} | y_{0:k-1})} \nonumber \\
-& \propto & w^i_{k-1}P(y_k| x_k) 
+& \propto & w^i_{k-1}P(y_k| x^i_k) 
 \label{eq:weightevolve}
 \end{eqnarray}
 
