fixes needed draft complete

--- a/doc/isbi/main.tex
+++ b/doc/isbi/main.tex
@@ -20,7 +20,7 @@
 %
 % Single address.
 % ---------------
-\name{Chambers, Micah C}
+\name{M. Chambers, C. Wyatt}
 \address{Virginia Tech\\
     Bradley Department of Electrical and Computer Engineering\\
     302 Whittemore Hall\\
